--- a/public/_partials/blog/bio.jade
+++ b/public/_partials/blog/bio.jade
@@ -2,7 +2,7 @@ section.l-negative-space.background-cloud
 
   h3 About the Author
 
-  for bio, name in authors
+  for person, name in team
     if author == name
-      img(src="#{bio.avatar}" align="left")
-      p= bio.bio
+      img(src="#{person.avatar}" align="left")
+      p #{person.bio}
